# test

./: README.md  pyproject.toml  requirements.txt
docs/: build_docs.sh
docs/source/: conf.py  fit_normative_data.rst  index.rst  scanometrics.processing.rst  scanometrics.rst  scanometrics.utils.rst  tutorials.rst
python_package/: .readthedocs.yaml  setup.cfg
python_package/docs/source/: conf.py  index.rst  scanometrics.rst  usage.rst
python_package/scanometrics/utils/: stats.py
scanometrics/: README.md  core.py  normative_models.py
scanometrics/processing/: __init__.py  freesurfer.py  quantifyBrainStructures.py
scanometrics/processing/resources/: DesikanKilliany_ROIs_select.txt  Destrieux_ROIs_select.txt
scanometrics/utils/: bids_util.py  logging.py  misc.py
