[metadata]
name = scanometrics
version = scanometrics.VERSION
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/scan-core/ScanOMetrics
project_urls =
    Bug Tracker = https://github.com/scan-core/ScanOMetrics/issues

[options]
package_dir =
    = scanometrics
packages = find:
python_requires = >=3.9

[options.packages.find]
where = scanometrics
