[metadata]
name = scanometrics
version = attr: scanometrics.__version__
description = python package for personal brain scan analysis
long_description = file: scanometrics/README.md
long_description_content_type = text/markdown
url = https://github.com/davidrs06/test
project_urls =
    Bug Tracker = https://github.com/davidrs06/test/issues

[options]
package_dir =
    = scanometrics
packages = find:
python_requires = >=3.9

[options.packages.find]
where = scanometrics
